# zorro-ib-cpapi-plugin

./: CMakeLists.txt  CMakePresets.json  README.md  Zorro IB-cpapi.sln  thunder-collection_Client Portal API.json
ib-cpapi-plugin/: CMakeLists.txt  ib-cpapi-plugin.vcxproj  ib-cpapi-plugin.vcxproj.filters  ib-cpapi.cpp  ib-cpapi.h  utils.cpp
